--- a/src/Pages/Home/homepage.css
+++ b/src/Pages/Home/homepage.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url(./images/rings.jpg);
+  background-image: url(../images/rings.jpg);
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
