--- a/src/Components/Navbar.css
+++ b/src/Components/Navbar.css
@@ -15,3 +15,13 @@ li {
 a {
   text-decoration: none;
 }
+.nav-animate{
+  animation: fadeIn 3s ;
+}
+@keyframes fadeIn{
+  from{
+    opacity: 0;
+  }to{
+    opacity: 1;
+  }
+}
