--- a/src/Components/dropdown.css
+++ b/src/Components/dropdown.css
@@ -4,4 +4,14 @@
 
 .nav-item:hover {
   font-weight: 600;
+  background-color: white;
 }
+
+/* dropdown-item {
+  font-weight: 600;
+  background-color: white;
+}
+
+.dropdown-menu {
+  font-weight: 600;
+} */
