--- a/src/Pages/Directions/directions.css
+++ b/src/Pages/Directions/directions.css
@@ -1,6 +1,6 @@
-body {
+/* body {
   background-image: url(../images/rings.jpg);
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-}
+} */
