--- a/src/Pages/Home/homepage.css
+++ b/src/Pages/Home/homepage.css
@@ -1,8 +1,15 @@
-body {
+body:after {
+  content: "";
+  position: fixed;
+  z-index: -10000;
+  top: 0px;
+  left: 0px;
   background-image: url(../images/rings.jpg);
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
+  height: 100vh;
+  width: 100vw;
 }
 
 .display-4 {
