--- a/src/Pages/Registry/registry.css
+++ b/src/Pages/Registry/registry.css
@@ -1,9 +1,9 @@
-body {
+/* body {
   background-image: url(../images/rings.jpg);
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-}
+} */
 
 .display-4 {
   font-family: "Great Vibes", cursive;
