--- a/src/Pages/Registry/registry.css
+++ b/src/Pages/Registry/registry.css
@@ -7,9 +7,11 @@
 
 .display-4 {
   font-family: "Great Vibes", cursive;
+  margin-top: 50px;
 }
 .jumbotron {
   opacity: 0.6;
+  padding-bottom: 1px;
 }
 .display-5 {
   font-family: Arial, Helvetica, sans-serif;
@@ -118,7 +120,7 @@ article {
   position: absolute;
   bottom: 0;
   width: 100%;
-  padding: 10px;
+  padding: 3px;
   background-color: rgb(73, 71, 71);
   color: white;
   /* border: 2px solid black;
