--- a/src/Components/Navbar.css
+++ b/src/Components/Navbar.css
@@ -15,13 +15,14 @@ li {
 a {
   text-decoration: none;
 }
-.nav-animate{
-  animation: fadeIn 3s ;
+.nav-animate {
+  animation: fadeIn 3s;
 }
-@keyframes fadeIn{
-  from{
+@keyframes fadeIn {
+  from {
     opacity: 0;
-  }to{
+  }
+  to {
     opacity: 1;
   }
 }
@@ -29,6 +30,7 @@ a {
 .navbar-nav {
   border-bottom: 3px solid black;
   border-top: 1px solid black;
+  /* position: fixed; */
 }
 
 .navbar {
@@ -36,6 +38,10 @@ a {
   opacity: 0.6;
 }
 
+.dropdown > button:hover,
+.dropdown-menu > a:hover {
+  font-weight: 600 !important;
+}
 a.nav-link:hover {
   font-weight: 600 !important;
 }
