--- a/src/Pages/AboutParty/aboutparty.css
+++ b/src/Pages/AboutParty/aboutparty.css
@@ -17,8 +17,9 @@
 .weddingParty {
   height: 20%;
   width: 20%;
-  background-color: #e9ecef;
+  background-color: #e2e2df;
   border-radius: 50%;
+  opacity: 0.9;
 }
 
 .partyPic {
@@ -26,5 +27,11 @@
   width: 50%;
   border-radius: 25px;
   margin-bottom: 10px;
-  border: 10px solid white;
+  border: 10px solid #e2e2df;
+}
+
+.column {
+  align-content: center;
+  justify-content: center;
+  justify-items: center;
 }
